--- a/examples/gamepad.xhtml
+++ b/examples/gamepad.xhtml
@@ -4,8 +4,7 @@
 	<link href="http://www.xml3d.org/xml3d/script/xml3d.css" media="all" rel="stylesheet" type="text/css"/>
     <title>GamepadConnector</title>
 	<script src="http://xml3d.org/xml3d/scripts/xml3d.js"  type="text/javascript"/>
-    <script src="../src/base/util.js" type="text/javascript"></script>
-    <script src="../src/gamepad/gamepadConnector.js" type="text/javascript"></script>
+	<script src="../build/output/xml3d-motion.js" type="text/javascript"/>
     <script src="gamepad.js" type="text/javascript"></script>
 </head>
 <body onload="init()">
