--- a/examples/cameracontroller.xhtml
+++ b/examples/cameracontroller.xhtml
@@ -8,7 +8,7 @@
 	</head>
 	<body onload="initCamera()">
 		<h1>CameraController</h1>
-		<xml3d xmlns="http://www.xml3d.org/2009/xml3d" style="width: 512px; height: 512px; background-color:rgb(14,56,102);">
+		<xml3d id="scene" xmlns="http://www.xml3d.org/2009/xml3d" style="width: 512px; height: 512px; background-color:rgb(14,56,102);">
 			<defs>
 				<transform id="t_TRANS"/>
 				<shader id="s_d1e23" script="urn:xml3d:shader:phong">
@@ -67,7 +67,7 @@
 
 			function initCamera(){
 				var rotatearoundpoint = false;
-				movObjects.cam = new XMOT.CameraController("node-camera_player", [0,0,0,0], "left", rotatearoundpoint);
+				movObjects.cam = new XMOT.CameraController("node-camera_player", "scene", [0,0,0,0], "left", rotatearoundpoint);
 				movObjects.cam.pointToRotateAround = [0,0,0];
 				createPois();
 			}
