--- a/examples/animation.xhtml
+++ b/examples/animation.xhtml
@@ -88,7 +88,7 @@
 
 <script type="text/javascript">
   var movObjects = {}, factory = new XMOT.ClientMotionFactory;
-  var constraint = new XMOT.SimpleConstraint(true, true);
+  var constraint = new XMOT.SimpleConstraint(true, true, true);
   var id = 0;
 
   function startPositionAnimation() {
