--- a/examples/cameracontroller.xhtml
+++ b/examples/cameracontroller.xhtml
@@ -55,7 +55,7 @@
 		<script type="text/javascript">
 			var movObjects = {};
 			var factory = new XMOT.ClientMotionFactory;
-			var constraint = new XMOT.SimpleConstraint(true, true);
+			var constraint = new XMOT.SimpleConstraint(true, true, true);
 
 			function animate(){
 				var aobj = movObjects.cube;
