--- a/examples/animation.xhtml
+++ b/examples/animation.xhtml
@@ -6,10 +6,18 @@
       xmlns:x3d="http://www.web3d.org/specifications/x3d-namespace">
    <head>
       <title>DOM Modifications: Animations</title>
+      
+      <link rel="stylesheet" type="text/css" media="all" href="style/default.css"/>
+
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+      <script type="text/javascript" src="page.js"></script>
+    
       <script src="http://xml3d.org/xml3d/scripts/xml3d.js"  type="text/javascript"/>
       <script src="../build/output/xml3d-motion.js" type="text/javascript"/>
    </head>
    <body>
+   <div id="overall">
+   <div id="content">
       <h1>Animatable</h1>
       <div style="color: red">
          <xml3d xmlns="http://www.xml3d.org/2009/xml3d" style="width: 512px; height: 512px; background-color:rgb(14,56,102);">
@@ -176,5 +184,7 @@
   };
 </script>
       <br/>
+   </div> 
+   </div>
    </body>
 </html>
