--- a/examples/cameracontroller.xhtml
+++ b/examples/cameracontroller.xhtml
@@ -3,10 +3,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:webgl="http://www.xml3d.org/2009/xml3d/webgl" xmlns:x3d="http://www.web3d.org/specifications/x3d-namespace">
 	<head>
 		<title>CameraController</title>
-		<script src="http://xml3d.org/xml3d/scripts/xml3d.js"  type="text/javascript"/>
+
+		<link rel="stylesheet" type="text/css" media="all" href="style/default.css"/>
+
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script type="text/javascript" src="page.js"></script>
+
+		<script type="text/javascript" src="../../xml3d.js/build/output/xml3d.js"></script>
 		<script src="../build/output/xml3d-motion.js" type="text/javascript"/>
 	</head>
 	<body onload="initCamera()">
+		<div id="overall">
+		<div id="content">
 		<h1>CameraController</h1>
 		<xml3d id="scene" xmlns="http://www.xml3d.org/2009/xml3d" style="width: 512px; height: 512px; background-color:rgb(14,56,102);">
 			<defs>
@@ -46,7 +54,7 @@
 				<button onclick="animate()">Animate for 100 seconds</button>
 			</div>
 			<br/>
-			<h2>Controlls:</h2>
+			<h2>Controls:</h2>
 			Rotation: Right Mousebutton down and move OR arrow keys<br/>
 			Movement: WASD + page Up / Down<br/>
 			Reset: R<br/>
@@ -92,5 +100,7 @@
 				cam.addPointOfInterest([i,i,i], [i,i,i,i]);
 			}
 		</script>
+		</div> 
+		</div>
 	</body>
 </html>
