--- a/examples/transformsensor.xhtml
+++ b/examples/transformsensor.xhtml
@@ -4,15 +4,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:webgl="http://www.xml3d.org/2009/xml3d/webgl">
 <head>
   <title>TransformSensor Test</title>
-  <link rel="stylesheet" type="text/css" media="all" href="../../style/default.css" />
+  <link rel="stylesheet" type="text/css" media="all" href="style/default.css" />
   
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-  <script type="text/javascript" src="../../../../xml3d.js/build/output/xml3d.js"></script>
-  <script type="text/javascript" src="../../../../xml3d.js/build/output/xml3d-tools.js"></script>
-  <script type="text/javascript" src="../../../build/output/xml3d-motion.js"></script>
-  <script type="text/javascript" src="../page.js" />
+  <script type="text/javascript" src="../../xml3d.js/build/output/xml3d.js"></script>
+  <script type="text/javascript" src="../../xml3d.js/build/output/xml3d-tools.js"></script>
+  <script type="text/javascript" src="../build/output/xml3d-motion.js"></script>
+  <script type="text/javascript" src="page.js" />
 
-  <script type="text/javascript" src="test_transformsensor.js"></script>
+  <script type="text/javascript" src="transformsensor.js"></script>
 </head>
 
 <body onload="initScene()">
