--- a/examples/animation.xhtml
+++ b/examples/animation.xhtml
@@ -12,7 +12,7 @@
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
       <script type="text/javascript" src="page.js"></script>
     
-      <script src="http://xml3d.org/xml3d/scripts/xml3d.js"  type="text/javascript"/>
+      <script src="external/xml3d.js"  type="text/javascript"/>
       <script src="../build/output/xml3d-motion.js" type="text/javascript"/>
    </head>
    <body>
