--- a/examples/cameracontroller.xhtml
+++ b/examples/cameracontroller.xhtml
@@ -9,7 +9,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 		<script type="text/javascript" src="page.js"></script>
 
-		<script type="text/javascript" src="../../xml3d.js/build/output/xml3d.js"></script>
+		<script type="text/javascript" src="external/xml3d.js"></script>
 		<script src="../build/output/xml3d-motion.js" type="text/javascript"/>
 	</head>
 	<body onload="initCamera()">
