--- a/examples/elementfactory.xhtml
+++ b/examples/elementfactory.xhtml
@@ -14,8 +14,8 @@
   <link rel="stylesheet" type="text/css" media="all" href="style/default.css" />
   
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-  <script type="text/javascript" src="../../xml3d.js/build/output/xml3d.js"></script>
-  <script type="text/javascript" src="../../xml3d.js/build/output/xml3d-tools.js"></script>
+  <script type="text/javascript" src="external/xml3d.js"></script>
+  <script type="text/javascript" src="external/xml3d-tools.js"></script>
   <script type="text/javascript" src="../build/output/xml3d-motion.js"></script>
   <script type="text/javascript" src="page.js" />
 
