renamed Movable to Transformable

--- a/examples/simple.xhtml
+++ b/examples/simple.xhtml
@@ -13,7 +13,7 @@
    <script src="CollisionConstraint.js" type="text/javascript"/>
    <script src="simple.js" type="text/javascript"/>
   </head>
-  <body onload="initMoveable();">
+  <body onload="initTransformable();">
   <div id="overall">
   <div id="content">
    <h1>
