Refactored ClientMotionFactory to be Singleton

--- a/examples/animation.xhtml
+++ b/examples/animation.xhtml
@@ -95,7 +95,7 @@
       <div id="footer"/>
 
 <script type="text/javascript">
-  var movObjects = {}, factory = new XMOT.ClientMotionFactory;
+  var movObjects = {}, factory = XMOT.ClientMotionFactory;
   var constraint = new XMOT.SimpleConstraint(true, true, true);
   var id = 0;
 
