--- a/examples/cameracontroller.xhtml
+++ b/examples/cameracontroller.xhtml
@@ -62,7 +62,7 @@
 
 		<script type="text/javascript">
 			var movObjects = {};
-			var factory = new XMOT.ClientMotionFactory;
+			var factory = XMOT.ClientMotionFactory;
 			var constraint = new XMOT.SimpleConstraint(true, true, true);
 
 			function animate(){
