small changes to pdsensor, singleaxisrotator and translatebox-test
o SingleAxisRotator: removed some debug output
o PDSensor: rewrote for-loop to not use for..in in array
o TranslateBox: enabled de-/attaching

--- a/examples/interaction/tests/test_translatebox.xhtml
+++ b/examples/interaction/tests/test_translatebox.xhtml
@@ -89,7 +89,7 @@
     </div>
 
     <div class="actions">
-        <input id="toggle" type="button" value="Attach" /> 
+        <input id="toggle" type="button" value="Attach" onclick="toggle();"/> 
     </div> 
     <div class="message">
     </div>
