examples: applied usage of new TranslateGizmo

--- a/examples/interaction/tests/test_translategizmo.xhtml
+++ b/examples/interaction/tests/test_translategizmo.xhtml
@@ -33,8 +33,10 @@
          </shader>
           <transform id="t_mainTarget" translation="0 0 -10" />
         </defs>
-        <group id="g_mainTarget" transform="#t_mainTarget" shader="#s_rectangle">
-          <mesh type="triangles" src="#d_rectangle" />
+        <group>
+          <group id="g_mainTarget" transform="#t_mainTarget" shader="#s_rectangle">
+            <mesh type="triangles" src="#d_rectangle" />
+          </group>
         </group>
       </xml3d>
   </div>
