--- a/examples/interaction/tests/test_translategizmo.xhtml
+++ b/examples/interaction/tests/test_translategizmo.xhtml
@@ -44,6 +44,10 @@
           <view position="0 0 10" id="v_camera" />
         </group>
       </xml3d>
+
+      <div>
+        <input id="b_detach" type="button" value="Detach" />
+      </div>
   </div>
 </div>
 </body>
