--- a/examples/interaction/tests/test_gizmos.xhtml
+++ b/examples/interaction/tests/test_gizmos.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd" >
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>TranslateGizmo Test</title>
+  <title>Gizmos Test</title>
   <link rel="stylesheet" type="text/css" media="all" href="../../style/default.css" />
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -11,12 +11,12 @@
   <script type="text/javascript" src="../../../build/output/xml3d-motion.js"></script>
   <script type="text/javascript" src="../page.js" />
 
-  <script type="text/javascript" src="test_translategizmo.js"></script>
+  <script type="text/javascript" src="test_gizmos.js"></script>
 </head>
 <body>
 <div id="overall">
     <div id="content">
-      <h1>TranslateGizmo Test</h1>
+      <h1>Gizmos Test</h1>
 
       <xml3d id="xml3dMain" style="width:640px;height:480px;background-color: #aaaaff;"
         activeView="#v_camera">
@@ -31,11 +31,12 @@
           <shader id="s_rectangle" script="urn:xml3d:shader:phong">
             <float3 name="diffuseColor">0.8 0.8 0.8</float3>
             <float name="ambientIntensity">1</float>
-         </shader>
+          </shader>
           <transform id="t_mainTargetParent" translation="0 0 -10" />
+          <transform id="t_mainTarget" scale="2 2 2" />
         </defs>
         <group transform="#t_mainTargetParent">
-          <group id="g_mainTarget" shader="#s_rectangle">
+          <group id="g_mainTarget" shader="#s_rectangle" transform="#t_mainTarget">
             <mesh type="triangles" src="#d_rectangle" />
           </group>
         </group>
@@ -46,7 +47,26 @@
       </xml3d>
 
       <div>
-        <input id="b_detach" type="button" value="Detach" />
+        <span>
+          <input type="radio" name="gizmotype" value="combined" checked="true" />
+          Combined
+        </span>
+        <span>
+          <input type="radio" name="gizmotype" value="translaterotate" />
+          TranslateRotate
+        </span>
+        <span>
+          <input type="radio" name="gizmotype" value="translate" />
+          Translate
+        </span>
+        <span>
+          <input type="radio" name="gizmotype" value="rotate" />
+          Rotate
+        </span>
+        <span>
+          <input type="radio" name="gizmotype" value="none" />
+          None
+        </span>
       </div>
   </div>
 </div>
