examples-gizmos: added configurability of rotation speed

--- a/examples/interaction/tests/test_gizmos.xhtml
+++ b/examples/interaction/tests/test_gizmos.xhtml
@@ -68,6 +68,9 @@
           None
         </span>
       </div>
+      <div>
+        Rotation speed: <input type="text" id="i_rotationSpeed" value="1" size="1"/>
+      </div>
   </div>
 </div>
 </body>
