examples-viewtracker: fixed test

--- a/examples/viewtracker.xhtml
+++ b/examples/viewtracker.xhtml
@@ -84,7 +84,7 @@
         </defs>
 
         <!-- accumulate a matrix: view position should be 0 10 20 -->
-        <group transform="#t_view">
+        <group id="g_myview" transform="#t_view">
           <view id="my_view" position="0 5 10" />
         </group>
 
