examples: fixed interaction tests for new cam ctrls

--- a/examples/interaction/tests/test_rotatorbox.xhtml
+++ b/examples/interaction/tests/test_rotatorbox.xhtml
@@ -34,7 +34,9 @@
         activeView="#defaultView"
         pickableBackground="true">
 
-      <view id="defaultView" position="20.481132 1 18.343665" />
+      <group>
+        <view id="defaultView" position="20.481132 1 18.343665" />
+      </group>
 
       <defs>
         <!-- === PLANE === -->
