--- a/examples/interaction/tests/test_transformbox_flat.xhtml
+++ b/examples/interaction/tests/test_transformbox_flat.xhtml
@@ -32,7 +32,9 @@
         activeView="#defaultView"
         pickableBackground="true">
 
-      <view id="defaultView" position="20.481132 1 18.343665" />
+      <group>
+        <view id="defaultView" position="20.481132 1 18.343665" />
+      </group>
 
       <defs>
         <data id="d_plane" >
