--- a/examples/interaction/tests/test_translatable.xhtml
+++ b/examples/interaction/tests/test_translatable.xhtml
@@ -29,7 +29,9 @@
         activeView="#controller_view"
         pickableBackground="true"
       >
-      <view id="controller_view" position="0 3 20" />
+      <group>
+        <view id="controller_view" position="0 3 20" />
+      </group>
 
       <defs>
         <data id="mySimpleMesh">
