examples-scalable: added camctrl

--- a/examples/interaction/tests/test_scalable.xhtml
+++ b/examples/interaction/tests/test_scalable.xhtml
@@ -27,7 +27,9 @@
         activeView="#controller_view"
         style="width:350px; height:350px;"
       >
-        <view id="controller_view" position="0 0 10" />
+        <group>
+          <view id="controller_view" position="0 0 10" />
+        </group>
 
         <defs>
           <data id="d_target" type="triangles">
