--- a/examples/interaction/tests/test_translatebox.xhtml
+++ b/examples/interaction/tests/test_translatebox.xhtml
@@ -28,7 +28,9 @@
           pickableBackground="true"
           style="width:350px; height:350px;"
         >
-          <view id="controller_view" position="0 0 10" />
+          <group>
+            <view id="controller_view" position="0 0 10" />
+          </group>
           <light id="light1" intensity="10.8" global="false" />
 
           <defs>
