examples-camctrl: added new touch-based fly controller

--- a/examples/cameracontrollers.xhtml
+++ b/examples/cameracontrollers.xhtml
@@ -67,6 +67,10 @@
                 Fly
             </span>
             <span>
+                <input type="radio" name="camtype" value="touch" />
+                TouchFly
+            </span>
+            <span>
                 <input type="radio" name="camtype" value="none" />
                 None
             </span>
