examples-camctrl: complicated example (target object's center is not (0,0,0)

--- a/examples/cameracontrollers.xhtml
+++ b/examples/cameracontrollers.xhtml
@@ -21,7 +21,7 @@
             style="width: 512px; height: 512px; background-color:rgb(14,56,102);"
             activeView="#v_camera">
             <defs>
-                <transform id="t_TRANS"/>
+                <transform id="t_TRANS" translation="5 5 -20"/>
                 <shader id="s_d1e23" script="urn:xml3d:shader:phong">
                     <float3 name="diffuseColor">0 0 0</float3>
                     <float3 name="specularColor">0 0 0</float3>
@@ -35,7 +35,7 @@
                     <float3 name="position">0 0 0 -2 0 0 0 0 0 2 0 0 0 0 0 0 -2 0 0 0 0 0 2 0 0 0 0 0 0 -2 0 0 0 0 0 2 0 0 0</float3>
                     <float4 name="orientation">1 0 0 0 0.7073882818222046 0.7068251967430115 0 0 0.0007963267271406949 0.9999997019767761 0 0 -0.7062616348266602 0.7079508900642395 0 0 -0.9999987483024597 0.0015926528722047806 0 0 1 0 0 0 0.7073882818222046 0 0.7068251967430115 0 0.0007963267271406949 0 0.9999997019767761 0 -0.7062616348266602 0 0.7079508900642395 0 -0.9999987483024597 0 0.0015926528722047806 0 1 0 0 0 0.7073882818222046 0 0 0.7068251967430115 0.0007963267271406949 0 0 0.9999997019767761</float4>
                 </data>
-                <transform id="t_camera" translation="0 0 10" />
+                <transform id="t_camera" translation="0 0 10"/>
             </defs>
             <group id="g_camera" transform="#t_camera">
                 <view id="v_camera"/>
