examples-camctrl: changed size of example box

--- a/examples/cameracontrollers.xhtml
+++ b/examples/cameracontrollers.xhtml
@@ -21,7 +21,7 @@
             style="width: 512px; height: 512px; background-color:rgb(14,56,102);"
             activeView="#v_camera">
             <defs>
-                <transform id="t_TRANS" translation="0 0 -10"/>
+                <transform id="t_TRANS" translation="0 0 -10" scale="2 1 2"/>
                 <shader id="s_d1e23" script="urn:xml3d:shader:phong">
                     <float3 name="diffuseColor">0 0 0</float3>
                     <float3 name="specularColor">0 0 0</float3>
