--- a/examples/interaction/tests/test_gizmos.xhtml
+++ b/examples/interaction/tests/test_gizmos.xhtml
@@ -51,11 +51,7 @@
 
       <div>
         <span>
-          <input type="radio" name="gizmotype" value="combined" checked="true" />
-          Combined
-        </span>
-        <span>
-          <input type="radio" name="gizmotype" value="translaterotate" />
+          <input type="radio" name="gizmotype" value="translaterotate" checked="true" />
           TranslateRotate
         </span>
         <span>
@@ -65,6 +61,10 @@
         <span>
           <input type="radio" name="gizmotype" value="rotate" />
           Rotate
+        </span>
+        <span>
+          <input type="radio" name="gizmotype" value="combined" />
+          Combined
         </span>
         <span>
           <input type="radio" name="gizmotype" value="none" />
