examples: adapted gizmos-test to new widgets

--- a/examples/interaction/tests/test_gizmos.xhtml
+++ b/examples/interaction/tests/test_gizmos.xhtml
@@ -51,20 +51,12 @@
 
       <div>
         <span>
-          <input type="radio" name="gizmotype" value="translaterotate" checked="true" />
-          TranslateRotate
-        </span>
-        <span>
-          <input type="radio" name="gizmotype" value="translate" />
+          <input type="radio" name="gizmotype" value="translate" checked="true" />
           Translate
         </span>
         <span>
           <input type="radio" name="gizmotype" value="rotate" />
           Rotate
-        </span>
-        <span>
-          <input type="radio" name="gizmotype" value="combined" />
-          Combined
         </span>
         <span>
           <input type="radio" name="gizmotype" value="none" />
